/case-studies/bitnami: Fix the expand/collapse button

--- a/src/components/Layout/home.css
+++ b/src/components/Layout/home.css
@@ -140,6 +140,7 @@ h1, h2, h3, h4, h5, h6, strong {
     text-decoration: none;
     display: inline-block;
     letter-spacing: 4px;
+    border: 0;
 }
 .btn:hover {
     text-decoration: none;
