--- a/src/pages/case-studies/bitnami.less
+++ b/src/pages/case-studies/bitnami.less
@@ -22,29 +22,32 @@
 
     .transcript {
         margin-bottom: 35px;
-    }
 
-    #transcript-content {
-        height: 400px;
-        overflow: hidden;
-        text-overflow: clip;
-        z-index: 1;
-    }
+        #transcript-content {
+            height: 400px;
+            overflow: hidden;
+            text-overflow: clip;
+            z-index: 1;
 
-    #transcript-content.expanded {
-        height: auto;
-    }
+            &.expanded {
+                height: auto;
+            }
+        }
 
+        .transcript-fade {
+            z-index: 10;
+            position: relative;
+            background: -webkit-linear-gradient(top, rgba(238, 242, 243, 0), #fff);
+            background: -o-linear-gradient(bottom, rgba(238, 242, 243, 0), #fff);
+            background: -moz-linear-gradient(bottom, rgba(238, 242, 243, 0), #fff);
+            background: linear-gradient(to bottom, rgba(238, 242, 243, 0), #fff);
+            height: 200px;
+            margin-top: -200px;
 
-    .transcript-fade {
-        z-index: 10;
-        position: relative;
-        background: -webkit-linear-gradient(top, rgba(238, 242, 243, 0), #fff);
-        background: -o-linear-gradient(bottom, rgba(238, 242, 243, 0), #fff);
-        background: -moz-linear-gradient(bottom, rgba(238, 242, 243, 0), #fff);
-        background: linear-gradient(to bottom, rgba(238, 242, 243, 0), #fff);
-        height: 200px;
-        margin-top: -200px;
+        }
+        .expanded ~ .transcript-fade {
+            display: none;
+        }
     }
 
     .slide-embed iframe {
